# roger

./: .dockerignore  .env.example  .gitignore  .sops.yaml  ARCHITECTURE.md  BACKLOG.md  Dockerfile  LICENSE  README.md  compose.dev.yaml  compose.yaml  pyproject.toml  roger.env.example
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  bootstrap.sh  hermes-bootstrap.sh  install-systemd.sh  roger-deploy.service  roger-deploy.sh  roger-deploy.timer
deploy/observability/: grafana-roger-dashboard.json  prometheus-roger.yml
docs/: personality.md
docs/decisions/: 0001-dollar-cost-tracking-token-gate.md  0002-supply-chain-enforced-at-deploy.md  0003-metrics-gauges-from-sqlite-plus-counters.md  0004-coverage-gate-regression-guard.md  0005-decouple-alerting-into-a-watchdog-loop.md  README.md
roger/: __init__.py  __main__.py  bot.py  config.py  health.py  llm.py  metrics.py  store.py
roger/brains/: __init__.py  admin.py  ambient.py  digest.py
roger/tools/: __init__.py  context.py  executors.py  guard.py  schemas.py
tests/: test_admin.py  test_ambient.py  test_compose.py  test_config.py  test_digest.py  test_dispatch.py  test_executors.py  test_guard.py  test_health.py  test_llm.py  test_metrics.py  test_ops.py  test_status.py  test_store.py  test_toys.py
